src/parser/tests/snapshots/rusty__parser__tests__inline_variable_tests__variable_declared_in_for_loop.snap
---
source: src/parser/tests/inline_variable_tests.rs
expression: result
---
CompilationUnit {
    global_vars: [],
    units: [
        POU {
            name: "main",
            variable_blocks: [],
            pou_type: Program,
            return_type: None,
        },
    ],
    implementations: [
        Implementation {
            name: "main",
            type_name: "main",
            linkage: Internal,
            pou_type: Program,
            statements: [
                ForLoopStatement {
                    counter: InlineVariable {
                        name: Identifier {
                            name: "x",
                        },
                        datatype: None,
                    },
                    start: LiteralInteger {
                        value: 0,
                    },
                    end: LiteralInteger {
                        value: 10,
                    },
                    by_step: None,
                    body: [],
                },
            ],
            location: SourceLocation {
                span: Range(
                    TextLocation {
                        line: 2,
                        column: 12,
                        offset: 39,
                    }..TextLocation {
                        line: 4,
                        column: 23,
                        offset: 106,
                    },
                ),
            },
            name_location: SourceLocation {
                span: Range(
                    TextLocation {
                        line: 1,
                        column: 20,
                        offset: 21,
                    }..TextLocation {
                        line: 1,
                        column: 24,
                        offset: 25,
                    },
                ),
            },
            overriding: false,
            generic: false,
            access: None,
        },
    ],
    user_types: [],
    file_name: "test.st",
}
