src/parser/tests/snapshots/rusty__parser__tests__inline_variable_tests__variable_declared_in_inner_scope.snap
---
source: src/parser/tests/inline_variable_tests.rs
expression: result
---
CompilationUnit {
    global_vars: [],
    units: [
        POU {
            name: "main",
            variable_blocks: [],
            pou_type: Program,
            return_type: None,
        },
    ],
    implementations: [
        Implementation {
            name: "main",
            type_name: "main",
            linkage: Internal,
            pou_type: Program,
            statements: [
                ForLoopStatement {
                    counter: InlineVariable {
                        name: Identifier {
                            name: "x",
                        },
                        datatype: None,
                    },
                    start: LiteralInteger {
                        value: 0,
                    },
                    end: LiteralInteger {
                        value: 10,
                    },
                    by_step: None,
                    body: [
                        Assignment {
                            left: InlineVariable {
                                name: Identifier {
                                    name: "y",
                                },
                                datatype: None,
                            },
                            right: LiteralInteger {
                                value: 5,
                            },
                        },
                    ],
                },
                IfStatement {
                    blocks: [
                        ConditionalBlock {
                            condition: LiteralBool {
                                value: true,
                            },
                            body: [
                                Assignment {
                                    left: InlineVariable {
                                        name: Identifier {
                                            name: "y",
                                        },
                                        datatype: None,
                                    },
                                    right: LiteralInteger {
                                        value: 10,
                                    },
                                },
                            ],
                        },
                    ],
                    else_block: [],
                },
            ],
            location: SourceLocation {
                span: Range(
                    TextLocation {
                        line: 2,
                        column: 12,
                        offset: 39,
                    }..TextLocation {
                        line: 9,
                        column: 23,
                        offset: 208,
                    },
                ),
            },
            name_location: SourceLocation {
                span: Range(
                    TextLocation {
                        line: 1,
                        column: 20,
                        offset: 21,
                    }..TextLocation {
                        line: 1,
                        column: 24,
                        offset: 25,
                    },
                ),
            },
            overriding: false,
            generic: false,
            access: None,
        },
    ],
    user_types: [],
    file_name: "test.st",
}
